force-app/main/default/objects/ResponseTemplate__c/ResponseTemplate__c.object-meta.xml
<CustomObject>
    <description>Oggetto per configurare i template risposta</description>
    <label>Template Risposta</label>
    <nameField>
        <label>Template Risposta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Risposte</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>