force-app/main/default/objects/ResponseTemplate__c/fields/ComplaintBodyResponse__c.field-meta.xml
<CustomField>
    <fullName>ComplaintBodyResponse__c</fullName>
    <label>Corpo Risposta Reclamo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>