force-app/main/default/objects/ResponseTemplate__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Argomento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Back Office _ Pagamenti e Credito Corp</fullName>
            </value>
            <value>
                <fullName>Back office - Contestazione lettura_consumi</fullName>
            </value>
            <value>
                <fullName>Back office - Fuga idrica</fullName>
            </value>
            <value>
                <fullName>Back office - Pagamenti e credito TARI</fullName>
            </value>
            <value>
                <fullName>Back office - Problematiche in fase di attivazione contrattuale</fullName>
            </value>
            <value>
                <fullName>Back office - Problematiche in fase di cessazione contrattuale</fullName>
            </value>
            <value>
                <fullName>Back Office - Reclami e compensazioni Corp</fullName>
            </value>
            <value>
                <fullName>Back office - Reclami rateizzazione</fullName>
            </value>
            <value>
                <fullName>Back office - Reclami su inversione contatore</fullName>
            </value>
            <value>
                <fullName>Back office - Reclami su preventivi</fullName>
            </value>
            <value>
                <fullName>Back office - Sollecito emissione prima bolletta</fullName>
            </value>
            <value>
                <fullName>BO_Cont lettura voltura  subentro  disattivazione  taglio  cambio offerta</fullName>
            </value>
            <value>
                <fullName>Cambio contatore non reg_doppia matr</fullName>
            </value>
            <value>
                <fullName>Cmor venditore entrante</fullName>
            </value>
            <value>
                <fullName>Cmor venditore uscente</fullName>
            </value>
            <value>
                <fullName>Contestazione contatore rotto dal gelo</fullName>
            </value>
            <value>
                <fullName>Contestazione disattivazione_cambio offerta</fullName>
            </value>
            <value>
                <fullName>Contestazione letture di switch in e switch out</fullName>
            </value>
            <value>
                <fullName>Contestazione mancata esenzione Fognatura e Depurazione</fullName>
            </value>
            <value>
                <fullName>Contestazione Offerta_Promo_Bonus_Sconti</fullName>
            </value>
            <value>
                <fullName>Contestazione voltura_subentro</fullName>
            </value>
            <value>
                <fullName>Contestazioni Diritti fissi e costi aperture e chiusura</fullName>
            </value>
            <value>
                <fullName>Contratti contestati ML</fullName>
            </value>
            <value>
                <fullName>Inversione contatore</fullName>
            </value>
            <value>
                <fullName>Lettere_Legge 81</fullName>
            </value>
            <value>
                <fullName>Lettere_Wave Rimborsi</fullName>
            </value>
            <value>
                <fullName>LETTERE CONTRATTO MUI</fullName>
            </value>
            <value>
                <fullName>LETTERE MOROSITA</fullName>
            </value>
            <value>
                <fullName>LETTERE PAGAMENTI 1 - INFO SU MODALITA DI PAGAMENTO</fullName>
            </value>
            <value>
                <fullName>LETTERE PAGAMENTI 2 - CONTESTAZIONI SU MODALITA DI PAGAMENTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>